--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.7",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.2",
     "react-redux": "^8.0.2",
-    "sass": "^1.54.0"
+    "sass": "^1.54.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "18.6.1",
