--- a/server/.production.env
+++ b/server/.production.env
@@ -2,7 +2,7 @@ PORT=7000
 POSTGRES_HOST=localhost
 POSTGRES_USER=postgres
 POSTGRES_DB=teaStore
-POSTGRES_PASSWORD=12354Tim
+POSTGRES_PASSWORD=12354
 POSTGRES_PORT=5432
 PRIVATE_KEY=secret_key
 CLIENT_URL=http://localhost:3000
