--- a/server/.development.env
+++ b/server/.development.env
@@ -1,8 +1,8 @@
-PORT=7000
+PORT=5000
 POSTGRES_HOST=localhost
 POSTGRES_USER=postgres
 POSTGRES_DB=teaStore
 POSTGRES_PASSWORD=12354
 POSTGRES_PORT=5432
 PRIVATE_KEY=secret_key
-CLIENT_URL=http://localhost:3000
+CLIENT_URL=http://37.110.132.109:3000
